Fixed text overflowing display

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,6 @@ main{
 }
 #display{
     width: 100%;
-    height: 90px;
     box-sizing: border-box;
     box-shadow: 0px 0px 8px rgb(226, 218, 218);
     border-radius: 3px;
@@ -31,14 +30,16 @@ main{
 #userInput, #result{
     text-align: right;
     padding-right: 15px;
+    text-overflow: clip;
+    word-wrap: break-word;
 }
 #userInput{
     font-size: 20px;
-    height: 25px;
+    min-height: 25px;
 }
 #result{
     font-size: 46px;
-    height: 55px;
+    min-height: 55px;
 }
 #buttons{
     margin-top: 15px;
